--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,16 +22,19 @@ jobs:
         with:
           dotnet-version: '3.1'  # Adjust based on your project's requirements
 
-      - name: Send File Content to API
+  process-last-commit-changes:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout (fetch last two commits) of the PR
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 2
+      - name: Process files changed in the current commit
         run: |
-          for file in $(git diff --name-only ${{ github.event.before }} ${{ github.sha }}); do
-            content=$(cat $file | tr '\n' ' ' | base64)
-            request_body="{\"filename\": \"$file\", \"content\": \"$content\"}"
+          changedFiles=$(git diff --name-only HEAD^)
+          for file in $changedFiles; do
             echo "Processing file: $file"
-            echo "API Request Body: $request_body"
-            response=$(curl -X POST -H "Content-Type: application/json" -d "$request_body" https://aliakseibely.bsite.net/ReviewService/Review)
-            echo "API Response: $response"
-            sleep 120  # Wait for 2 minutes
           done
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
