--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Env
+      run: env
+
     - name: Log PR files content
       run: |
         for file in $(git diff --name-only ${{ github.event.before }} ${{ github.sha }}); do
