--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,15 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
+    - name: Ping Server 1
+      run: ping -s 200 -c 1 212.98.190.23
+
+    - name: Ping Server 2
+      run: ping -s 200 -c 1 212.98.190.23
+
+    - name: Wait for 5 seconds
+      run: sleep 5
+
     - name: Set up .NET Core
       uses: actions/setup-dotnet@v2
       with:
