--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,10 +14,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Ping Server 1
-      run: ping -s 200 -c 1 212.98.190.23
+      run: ping -s 200 -c 1 212.98.190.23 || true
 
     - name: Ping Server 2
-      run: ping -s 200 -c 1 212.98.190.23
+      run: ping -s 200 -c 1 212.98.190.23 || true
 
     - name: Wait for 5 seconds
       run: sleep 5
