--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,7 +20,7 @@ jobs:
       run: ping -s 100 -c 1 212.98.190.23 || true
 
     - name: Ping Server 3
-      run: ping google.com || true
+      run: echo "" | nc -w 5 8.8.8.8 80 || true
 
     - name: Wait for 5 seconds
       run: sleep 5
