--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,6 +14,4 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run Console App
-      run: .\Demo.exe ${{ github.repository_id }} ${{ github.event.number }} .NET ${{ secrets.REPO_ACCESS_SECRET }} http://localhost:5001
-      env:
-        REPO_ACCESS_SECRET: ${{ secrets.REPO_ACCESS_SECRET }}
+      run: .\Demo.exe ${{ github.repository_id }} ${{ github.event.number }} .NET ${{ secrets.GITHUB_TOKEN }} http://localhost:5001
